--- a/MyApplication_brightness/app/src/main/AndroidManifest.xml
+++ b/MyApplication_brightness/app/src/main/AndroidManifest.xml
@@ -25,5 +25,6 @@
             android:label="@string/app_name" >
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 </manifest>
