--- a/MyApplication_brightness/app/src/main/AndroidManifest.xml
+++ b/MyApplication_brightness/app/src/main/AndroidManifest.xml
@@ -18,11 +18,13 @@
         </activity>
         <activity
             android:name=".GotoHomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         </activity>
         <activity
             android:name=".SOSActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
