--- a/AmazingSchoolbagMonitor/app/build.gradle
+++ b/AmazingSchoolbagMonitor/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "com.example.AmazingSchoolbagMonitor"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
